RESOLVED FIXED303660
[Site Isolation] WebContent processes in visible iframes are not always getting a foreground assertion
https://bugs.webkit.org/show_bug.cgi?id=303660
Summary [Site Isolation] WebContent processes in visible iframes are not always getti...
Per Arne Vollan
Reported 2025-12-05 14:15:46 PST
WebContent processes in visible iframes are not always getting a foreground assertion.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-05 14:15:53 PST
Per Arne Vollan
Comment 2 2025-12-05 14:20:45 PST
EWS
Comment 3 2025-12-06 07:29:52 PST
Committed 304054@main (e9efe850d15e): <https://commits.webkit.org/304054@main> Reviewed commits have been landed. Closing PR #54955 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.